// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActiveUserListItem should render deletable correctly 1`] = `
<ListItem
  autoGenerateNestedIndicator={true}
  containerElement="span"
  disableKeyboardFocus={false}
  disabled={false}
  initiallyOpen={false}
  insetChildren={false}
  leftAvatar={
    <Avatar
      icon={<SocialPerson />}
      size={40}
    />
  }
  nestedItems={Array []}
  nestedLevel={0}
  onKeyboardFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onNestedListToggle={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  open={null}
  primaryText="person"
  primaryTogglesNestedList={false}
  rightIconButton={
    <IconButton
      disableTouchRipple={false}
      disabled={false}
      iconStyle={Object {}}
      onClick={[Function]}
      tooltipPosition="bottom-center"
      touch={false}
    >
      <ActionDelete />
    </IconButton>
  }
  secondaryText="email@email.com"
  secondaryTextLines={1}
/>
`;

exports[`ActiveUserListItem should render not deletable correctly 1`] = `
<ListItem
  autoGenerateNestedIndicator={true}
  containerElement="span"
  disableKeyboardFocus={false}
  disabled={false}
  initiallyOpen={false}
  insetChildren={false}
  leftAvatar={
    <Avatar
      icon={<SocialPerson />}
      size={40}
    />
  }
  nestedItems={Array []}
  nestedLevel={0}
  onKeyboardFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onNestedListToggle={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  open={null}
  primaryText="person"
  primaryTogglesNestedList={false}
  secondaryText="email@email.com"
  secondaryTextLines={1}
/>
`;
